--- a/action/templates/action/new.html
+++ b/action/templates/action/new.html
@@ -1,10 +1,9 @@
-<html>
-  <header></header>
-  <body>
+{% extends 'base.html' %}
+
+{% block content %}
     <form method="POST">
       {% csrf_token %}
       {{ form.as_p }}
       <p><input type="submit" />
     </form>
-  </body>
-</html>
+{% endblock %}
