use bootstrap form style.

--- a/datasource/templates/datasource/new.html
+++ b/datasource/templates/datasource/new.html
@@ -1,9 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <form method="POST">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <p><input type="submit" />
-    </form>
+    {% include "form.html" %}
 {% endblock %}
