--- a/alarm/templates/alarm/new.html
+++ b/alarm/templates/alarm/new.html
@@ -1,10 +1,5 @@
-<html>
-  <header></header>
-  <body>
-    <form method="POST">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <p><input type="submit" />
-    </form>
-  </body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+    {% include 'form.html' %}
+{% endblock %}
