--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -2,6 +2,7 @@
 
 {% block bootstrap3_content %}
 <div class="container">
+	<h1>{% block title %}{% endblock %}</h1>
 	{% block content %}{% endblock %}
 </div>
 {% endblock %}
