--- a/datasource/templates/datasource/list.html
+++ b/datasource/templates/datasource/list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Data sources{% endblock %}
+
 {% block content %}
     <ul>
       {% for item in list %}
