--- a/alarm/templates/alarm/list.html
+++ b/alarm/templates/alarm/list.html
@@ -3,9 +3,12 @@
 {% block title %}Alarms{% endblock %}
 
 {% block content %}
+    <p>
+    <a href="{% url 'alarm-new' %}">new</a>
+    </p>
     <ul>
       {% for item in list %}
-      <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }}</li>
+      <li>{{ item.name }} - {{ item.expression }}</li>
       {% endfor %}
     </ul>
 {% endblock %}
