--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -1,8 +1,13 @@
 {% extends 'bootstrap3/bootstrap3.html' %}
 
+{% load bootstrap3 %}
+
 {% block bootstrap3_content %}
 <div class="container">
 	<h1>{% block title %}{% endblock %}</h1>
+
+	{% bootstrap_messages %}
+
 	{% block content %}{% endblock %}
 </div>
 {% endblock %}
