--- a/action/templates/action/list.html
+++ b/action/templates/action/list.html
@@ -5,7 +5,8 @@
 {% block content %}
     <ul>
       {% for item in list %}
-      <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }}</li>
+
+      <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }} <a href="{% url 'action-remove' item.Name %}">remove</a></li>
       {% endfor %}
     </ul>
 {% endblock %}
