--- a/datasource/templates/datasource/list.html
+++ b/datasource/templates/datasource/list.html
@@ -5,7 +5,7 @@
 {% block content %}
     <ul>
       {% for item in list %}
-      <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }}</li>
+      <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }} <a href="{% url 'datasource-remove' item.Name %}">remove</a></li>
       {% endfor %}
     </ul>
 {% endblock %}
