--- a/datasource/templates/datasource/list.html
+++ b/datasource/templates/datasource/list.html
@@ -3,6 +3,9 @@
 {% block title %}Data sources{% endblock %}
 
 {% block content %}
+    <p>
+    <a href="{% url 'datasource-new' %}">new</a>
+    </p>
     <ul>
       {% for item in list %}
       <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }} <a href="{% url 'datasource-remove' item.Name %}">remove</a></li>
