--- a/action/templates/action/list.html
+++ b/action/templates/action/list.html
@@ -4,12 +4,12 @@
 
 {% block content %}
     <p>
-    <a href="{% url 'action-new' %}">new</a>
+    <a href="{% url 'action-new' %}?TSURU_TOKEN={{ request.token }}">new</a>
     </p>
     <ul>
       {% for item in list %}
 
-      <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }} <a href="{% url 'action-remove' item.Name %}">remove</a></li>
+      <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }} <a href="{% url 'action-remove' item.Name %}?TSURU_TOKEN={{ request.token }}">remove</a></li>
       {% endfor %}
     </ul>
 {% endblock %}
