--- a/dashboard/templates/form.html
+++ b/dashboard/templates/form.html
@@ -1,6 +1,6 @@
 {% load bootstrap3 %}
 
-<form method="POST">
+<form method="POST" action="?TSURU_TOKEN={{ request.token }}">
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons submit='OK' reset="Cancel" %}{% endbuttons %}
