--- a/datasource/templates/datasource/list.html
+++ b/datasource/templates/datasource/list.html
@@ -8,7 +8,7 @@
     </p>
     <ul>
       {% for item in list %}
-      <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }} <a href="{% url 'datasource-remove' item.Name %}?TSURU_TOKEN={{ request.token }}">remove</a></li>
+      <li>{{ item.Name }} - {{ item.Method }} on {{ item.URL }} <a href="{% url 'datasource-get' item.Name %}?TSURU_TOKEN={{ request.token }}">view details</a></li>
       {% endfor %}
     </ul>
 {% endblock %}
