--- a/alarm/templates/alarm/get.html
+++ b/alarm/templates/alarm/get.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Actions{% endblock %}
+{% block title %}Alarm{% endblock %}
 
 {% block content %}
 <p>name: {{ item.name }}</p>
