--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -1,6 +1,11 @@
 {% extends 'bootstrap3/bootstrap3.html' %}
 
 {% load bootstrap3 %}
+{% load staticfiles %}
+
+{% block bootstrap3_extra_head %}
+<link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
+{% endblock %}
 
 {% block bootstrap3_content %}
 <div class="container">
