--- a/instance/templates/instance/get.html
+++ b/instance/templates/instance/get.html
@@ -1,7 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{{ item }}
-<p>name: {{ item.name }}</p>
-{{ alarms }}
+<p>name: {{ item.Name }}</p>
+<p>apps: {{ item.Apps }}</p>
+<p>
+    <a href="{% url 'wizard-index' %}?TSURU_HOST={{ request.token }}">
+        add new scale
+    </a>
+</p>
+<ul>
+{% for alarm in alarms %}
+<li>{{ alarm.Name }}</li>
+{% endfor %}
+</ul>
 {% endblock %}
