--- a/instance/templates/instance/list.html
+++ b/instance/templates/instance/list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <ul>
+    <ul class="list-group">
       {% for item in list %}
       <li class="list-group-item">
         <a href="{% url 'instance-get' item.Name %}?TSURU_TOKEN={{ request.token }}">
