--- a/wizard/templates/wizard/index.html
+++ b/wizard/templates/wizard/index.html
@@ -5,7 +5,7 @@
 {% block title %}Creating auto scale{% endblock %}
 
 {% block content %}
-<form method="POST" action="?TSURU_TOKEN={{ request.token }}" class="form-horizontal">
+<form method="POST" action="?TSURU_TOKEN={{ token }}" class="form-horizontal">
     {% csrf_token %}
     <fieldset>
         {% bootstrap_form config_form layout="horizontal" %}
