--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% if autoscale %}
+    {% if auto_scale %}
     <p><strong>Start with units:</strong> {{ auto_scale.minUnits }}</p>
 
     <h3>Scale up </h3>
