--- a/tsuru_autoscale/templates/instance/list.html
+++ b/tsuru_autoscale/templates/instance/list.html
@@ -1,6 +1,9 @@
-{% extends 'base.html' %}
+{% extends "apps/base.html" %}
 
-{% block content %}
+{% block navbar %}
+{% endblock %}
+
+{% block app-content %}
     <ul class="list-group">
       {% for item in list %}
       <li class="list-group-item">
