--- a/tsuru_autoscale/templates/wizard/index.html
+++ b/tsuru_autoscale/templates/wizard/index.html
@@ -1,23 +1,20 @@
 {% extends 'base.html' %}
 
-{% load bootstrap3 %}
-
 {% block title %}Creating auto scale{% endblock %}
 
 {% block content %}
 <form method="POST" action="?TSURU_TOKEN={{ token }}" class="form-horizontal">
     {% csrf_token %}
     <fieldset>
-        {% bootstrap_form config_form layout="horizontal" %}
+        {#% bootstrap_form config_form layout="horizontal" %#}
     </fieldset>
     <fieldset>
         <legend>Scale up</legend>
-        {% bootstrap_form scale_up_form layout="horizontal" %}
+        {#% bootstrap_form scale_up_form layout="horizontal" %#}
     </fieldset>
     <fieldset class="elist">
         <legend>Scale down</legend>
-        {% bootstrap_form scale_down_form layout="horizontal" %}
+        {#% bootstrap_form scale_down_form layout="horizontal" %#}
     </fieldset>
-    {% buttons submit='OK' reset="Cancel" %}{% endbuttons %}
 </form>
 {% endblock %}
