Fix plugin to work in new version of tsuru-dashboard

--- a/tsuru_autoscale/templates/app/index.html
+++ b/tsuru_autoscale/templates/app/index.html
@@ -9,13 +9,13 @@
   <div class="navbar-inner">
     <ul class="nav navbar-nav">
       <li>
-        <a title="resources" href="{% url 'detail-app' app %}">resources</a>
+        <a title="resources" href="{% url 'app-resources' app %}">resources</a>
       </li>
       <li>
         <a title="deploys" href="{% url 'app-deploys' app %}">deploys</a>
       </li>
       <li>
-        <a title="log" href="{% url 'app_log' app %}">log</a>
+        <a title="log" href="{% url 'app-log' app %}">log</a>
       </li>
       <li>
         <a title="settings" href="{% url 'app-settings' app %}">settings</a>
