remove tsuru token from url in wizard

--- a/tsuru_autoscale/templates/app/index.html
+++ b/tsuru_autoscale/templates/app/index.html
@@ -33,12 +33,14 @@
 <p><strong>Start with units:</strong> {{ auto_scale.minUnits }}</p>
 
 <h3>Scale up </h3>
-<p><strong>Expression:</strong> {{ auto_scale.scaleUp.metric }} {{ auto_scale.scaleUp.operator }} {{ auto_scale.scaleUp.value }}</p>
+<p><strong>Expression:</strong> {{ auto_scale.scaleUp.metric }} {{ auto_scale.scaleUp.operator }}
+  {{ auto_scale.scaleUp.value }}</p>
 <p><strong>Aggregator:</strong> {{ auto_scale.scaleUp.aggregator }}</p>
 <p><strong>Step (in units):</strong> {{ auto_scale.scaleUp.step }} </p>
 <p><strong>Wait time (in seconds):</strong> {{ auto_scale.scaleUp.wait }}</p>
 <h3>Scale down </h3>
-<p><strong>Expression:</strong> {{ auto_scale.scaleDown.metric }} {{ auto_scale.scaleDown.operator }} {{ auto_scale.scaleDown.value }}</p>
+<p><strong>Expression:</strong> {{ auto_scale.scaleDown.metric }} {{ auto_scale.scaleDown.operator }}
+  {{ auto_scale.scaleDown.value }}</p>
 <p><strong>Aggregator:</strong> {{ auto_scale.scaleDown.aggregator }}</p>
 <p><strong>Step (in units):</strong> {{ auto_scale.scaleDown.step }} </p>
 <p><strong>Wait time (in seconds):</strong> {{ auto_scale.scaleDown.wait }}</p>
@@ -69,13 +71,13 @@
   </tbody>
 </table>
 {% endif %}
-<a href="{% url 'wizard-remove' instance.Name %}?TSURU_TOKEN={{ token }}">remove auto scale</a>
+<a href="{% url 'wizard-remove' instance.Name %}">remove auto scale</a>
 {% if auto_scale.enabled %}
-<a href="{% url 'wizard-disable' instance.Name %}?TSURU_TOKEN={{ token }}">disable auto scale</a>
+<a href="{% url 'wizard-disable' instance.Name %}">disable auto scale</a>
 {% else %}
-<a href="{% url 'wizard-enable' instance.Name %}?TSURU_TOKEN={{ token }}">enable auto scale</a>
+<a href="{% url 'wizard-enable' instance.Name %}">enable auto scale</a>
 {% endif %}
 {% else %}
-<a href="{% url 'wizard-new' app %}?TSURU_TOKEN={{ token }}" class="btn btn-default">add auto scale</a>
+<a href="{% url 'wizard-new' app %}" class="btn btn-default">add auto scale</a>
 {% endif %}
 {% endblock %}
