--- a/tsuru_autoscale/templates/wizard/index.html
+++ b/tsuru_autoscale/templates/wizard/index.html
@@ -3,7 +3,7 @@
 {% block title %}Creating auto scale{% endblock %}
 
 {% block content %}
-<form method="POST" action="?TSURU_TOKEN={{ token }}" class="form-horizontal">
+<form method="POST" action="" class="form-horizontal">
     {% csrf_token %}
     <fieldset>
         {{ config_form.as_p }}
